body overflow on mobile fix check

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -22,6 +22,10 @@ html:focus-within {
 }
 
 /* Set core body defaults */
+html,
+body {
+  overflow-x: hidden;
+}
 body {
   max-width: 100vw;
   min-height: 100vh;
